<resources>
    <string name="app_name">MGHS APP</string>
    <string name="bodyHistorySchoolAboutBangla">সরকারি বিদ্যালয়ের ইতিহাস\n\nমাগুরা সরকারি উচ্চ বিদ্যালয় মাগুরা জেলা তথা বৃহত্তর যশোর জেলার ঐতিহ্যবাহী গৌরব মন্ডিত সুপ্রাচীন বিদ্যালয় গুলোর অগ্রজ। ১৮৫৪ সালে বৃহত্তর যশোর জেলার অন্তর্গত মহকুমা শহর মাগুরায় এর অবস্থান এবং এখানেই উচ্চ বিদ্যালয়ের গোড়াপত্তন। এই বিদ্যালয়ের সূতিকাগৃহ মাগুরার ২ মাইল পশ্চিমে শিবরামপুর গ্রামে।
ইংরেজ শাসন আরও মজবুত করার লক্ষ্যে ১৮৪৫ সালে সাবেক যশোর জেলার একটি মহকুমা করা হয় এই মাগুরা শহরকে। প্রায় দশ বছর পর এক শুভ লগ্নে শিবরামপুর থেকে এই বিদ্যালয়টিকে উচ্চ বিদ্যালয়ে উন্নীত করার আশ্বাসে তুলে নিয়ে আসা শিবরাম পুর থেকে মাগুরায়।\n\n
বর্তমান জেলা প্রশাসকের বাসভবন যেখানে, বিদ্যালয়টির অবস্থান হয়েছিল সেখানে একটি খড়ের ঘরে। কালচক্রে এগিয়ে চলে। ১৮৭৬ সালে এক অগ্নিকান্ডে পুড়ে ছারখার হয়ে যায় স্কুল ভবনটি।
ছাত্র-শিক্ষক-অভিবাবক মহল পড়েন এক মহাবিপদে। মেঘের আড়ালে হারা শশীর ছায়া রশ্মিতে আবার উদ্ভাসিত হয় বিদ্যালয়টি। তদানিন্তন মহাকুমা প্রশাসক বাবু কালীপ্রসন্ন সিংহ মশায়ের অসাধ্য সাধনার ফলে বিদ্যালয় ভবন স্থানান্তরিত হয় একটি পাকাপক্ত ইমারতে যেখানে আজকের মাগুরা সরকারি মহিলা কলেজের মূল ভবন সেখানটিতে। কালচক্রে সরকারের সদিচ্ছায় বিদ্যালয়টির সরকারিকরন হয় ১ ফেব্রুয়ারি ১৯৭০ সালে।\n\n
১ আগস্ট ১৯৮১ সালে বিদ্যালয়টি আবার স্থানান্তরিত হয় তার বর্তমান অবস্থানে। প্রায় তের একরের বিরাট একত্রিভূত জমিতে তদানিন্তন বাংলাদেশ সরকারের মাননিয় মন্ত্রী মাগুরার কৃতি সন্তান জনাব মেজর জেনারেল (অবঃ) মজিদ-উল-হকের সার্বিক প্রচেষ্টায়।\n\n
  স্কুলের এই জমাজমি খরিদে সর্বাত্নক প্রচেষ্টা চালান ভায়না গ্রাম নিবাসী মরহুম নুরুল ইসলাম। স্মৃতির পটে যা অক্ষয় তিলক হয়ে থাকবে চিরদিন।এই অসাধ্য সাধন প্রচেষ্টার জন্য তাকে আমরা চিরদিন স্মরন করবো।\n\n
এ প্রতিষ্ঠান তার দীর্ঘ ১৬১ বছরের যাত্রায় জন্ম দিয়েছে বহু কৃতি ব্যাক্তিত্ব এবং এ ধারা অদ্যাবধি বহমান রয়েছে। এ প্রতিষ্ঠান অগনিত ডাক্তার, ইঞ্জিনিয়ার, শিক্ষক, অধ্যাপক, ব্যারিস্টার, আইনজীবি, অধ্যক্ষ, কবি, সাহিত্যিক, সাংবাদিক, পত্রিকা সম্পাদক, সমাজ সেবক, মন্ত্রী ইতিহাসবেত্তা, ব্যাংক বিশারদ, বি.সি.এস কর্মকর্তা, সচিব, বিজ্ঞানি, কেমিস্ট, কৃষিবিদ, রসায়নবিদ, ভাইস-চ্যান্সেলর, সেনানায়ক, ক্রীড়া বিদ, কৃষি বিজ্ঞানী, এম.ফিল ও পি.এইচ.ডি ধারক ব্যক্তিত্ব, জেলা প্রশাসক এবং জজ সৃষ্টিতে অগ্রনী ভুমিকা পালন করে চলেছে। তাই, আমাদের এ শিক্ষায়নের গুনগত মান সাধারন মানের চেয়ে অনেক উর্ধ্বে, সবার ধরা ছোয়ার বাইরে।\n\n
এবং তাই আমাদের এই গৌরবময় বিদ্যালয়টিকে আরও উচ্চতর সীমানায় নিয়ে যেতে এবং এটিকে বাংলাদেশের প্রথম শ্রেনীর বিদ্যালয় গুলোর মধ্যে একটি করে গড়ে তোলার পক্ষে আমাদের ভুমিকা রাখা উচিত।\n\n
      মাসউবি ম্যাগাজিন থেকে সংগ্রীহিত

    </string>
    <string name="bodyHistorySchoolAboutEnglish">THIS PART IS NOT YET TRANSLATED, IF YOU  HAVE ANY TRANSLATED COPY OF THIS PART THEN PLEASE SEND IT TO US AND WE WILL PUBLISH IT WITH YOUR NAME</string>
    <string name="titleAboutBangla">মাগুরা সরকারি উচ্চ বিদ্যালয়ের ইতিহাস</string>
    <string name="titleAboutEnglish">Magura Govt. High School\'s History</string>
    <string name="phoneNumberTitleBangla">শিক্ষকদের তথ্য</string>
    <string name="phoneNumberTitleEnglish">Teachers Info</string>
    <string name="headSirBangla">মোঃ জাহাঙ্গির আলম\nপ্রধান শিক্ষক (ভারপ্রাপ্ত),বি.কম (অনার্স),এম.কম বি.এড</string>
    <string name="headSirEnglish">Md. Jahangir Alam\nHead Sir (Act.), B.Com (Onars) M.COM, B.AD</string>
    <string name="attendence_report_text">Attendence Report (ONLINE)</string>
    <string name="saved_attendence_text">Saved Attendence (OFFLINE)</string>
    <string name="submit_attendence_text">Submit Attendence (ONLINE)</string>
    <string name="submit_attendence_offline">Submit Attendence (OFFLINE)</string>
    <string name="attendence_menu_nselect_an_option_below">Attendence Menu\nSelect An Option Below</string>
    <string name="students_info_text">Students Info</string>
    <string-array name="students_name_10sMsAgS">
        <item>NAFIS SHAHRIAR</item>
        <item>ANINDYA BISWAS</item>
        <item>Md. Abdur Rahaman</item>
        <item>NAIMUL ISLAM NISHAT</item>
        <item>Mohaymenul Akbar</item>
        <item>MAHRAB HOSSIN TANIM</item>
        <item>MD. JUBAYER AL SAKIB</item>
        <item>MD. AKIB MAHMUD</item>
        <item>MD. BAPPY HASAN</item>
        <item>ANTOR MOJUMDER</item>
        <item>ANIRUDHA GHOSH ANKUR</item>
        <item>SYED SAIFULLA RAIHAN</item>
        <item>RUPONKOR BISWAS</item>
        <item>MEHEDI HASAN</item>
        <item>NAIMUL HASAN ARKO</item>
        <item>MD. ASIF BILLA</item>
        <item>MD. RATUL HASAN</item>
        <item>MD. ASMAY AZOM</item>
        <item>RAIHANUL ISLAM</item>
        <item>PROSENJIT MITRO DEEP</item>
        <item>OLIULLAH</item>
        <item>NAIEM PARVEZ</item>
        <item>JAMIL HOSSEN</item>
        <item>MD. HASIB MRIDHA</item>
        <item>SOUROV SARKAR</item>
        <item>MD. ALEMA VASANI Badhon</item>
        <item>MD. MAHMUDUR RAHMAN</item>
        <item>MUNSHI SIFAT RAHMAN</item>
        <item>AVIGAANE SAHA AVI</item>

    </string-array>
    <string-array name="students_name_10sMsAgA">
        <item>MD. SHARIAR RAHMAN</item>
        <item>MD. FARDAUS HASAN</item>
        <item>MD. TANVIR HOSSAIN</item>
        <item>SADIKUR RAHMAN</item>
        <item>PARTHO BISWAS</item>
        <item>ANKUR BISWAS</item>
        <item>MD. SYAM KAZI</item>
        <item>MD. HASIB MUNSHI</item>
    </string-array>
    <string-array name="students_name_10sMsAgC">
        <item>SOUROV KUMAR SAHA</item>
        <item>MD. TYMIM ISLAM TURJO</item>
        <item>MD. SOMRAT ZISAN</item>
        <item>ASIF ZAHANGIR</item>
        <item>MD. INZAMUL ALAM ROMIM</item>
        <item>MD. TAHSIN ISLAM TONU</item>
        <item>ANTOR SAHA</item>
        <item>ALIF AL SABIT</item>
        <item>SAYED AHSANUL KABIR RATUL</item>

    </string-array>
    <string-array name="students_name_10sMsBgS">
        <item>Ankur Biswas</item>
        <item>Md. Tajbid Alam Omi</item>
        <item>SUVROW ROY</item>
        <item>SATADAL DEY</item>
        <item>Safkat Taseen</item>
        <item>Pantha pranjal Biswas</item>
        <item>MD. MUEEN KHAN</item>
        <item>RASHEED SHARIAR</item>
        <item>MD. ASIFUR RAHMAN</item>
        <item>NILOY MRIDHA</item>
        <item>Md. Tahsinur Rahman</item>
        <item>RUBAET</item>
        <item>Md. Rafi Abdullah</item>
        <item>RAFSAN HOSSAIN RATUL</item>
        <item>MD. SHOHAG PERVEG</item>
        <item>JANNATUL SABDID</item>
        <item>Md. Alfaz Uddin</item>
        <item>DIPTO SHORNOKER</item>
        <item>FAISAL MAHMUD</item>
        <item>Ashraful Hayath Akash</item>
        <item>PROTIK MONDAL</item>
        <item>Md. Shazid Hasan</item>
        <item>ABVRA SIKDER</item>
        <item>ABU RAIHAN</item>
        <item>SYED HASIBUL KABIR</item>
        <item>MD.MARUF MIA</item>
        <item>ABDUR RAHMAN</item>
        <item>SHIKDER MAZEDUR RAHMAN SAMRAT</item>
        <item>Apon Kumar Dey</item>
        <item>Md. Naimur Rahman jisan</item>
        <item>Md. Zihadul Islam Swadheen</item>
        <item>Nazmus Sakib</item>
    </string-array>
    <string-array name="students_name_10sMsBgA">
        <item>JAYED BIN ZAMAN</item>
        <item>ABDULLAH AL MAMUN</item>
        <item>Rizyvy</item>
        <item>Aronno Islam</item>
        <item>Md. Riaj Hosen</item>
        <item>Md. Pranto Patoyary</item>
        <item>MD.MAJHARUL ISLAM SHOUROV</item>
        <item>Mujahid Islam</item>
        <item>Zayed Siddique</item>
        <item>MK. Shahed Al Shahriar</item>
        <item>Husinuzzaman Oase</item>


    </string-array>
    <string-array name="students_name_10sMsBgC">
        <item>MD.HAMIM TASRIF SAIF</item>
        <item>Tonmoy Mojumder</item>
        <item>MD. AL MAMUN</item>
        <item>MEHEDI HASAN</item>
        <item>Abdul Ahad Lemon</item>
        <item>Sabbir</item>
        <item>Mustabi Rahman Supto</item>

    </string-array>
    <string-array name="students_name_9sMsAgS">
        <item>UTHSO SARKER</item>
        <item> * * TC * * </item>
        <item>MD. MOINUL ISLAM RIDOY</item>
        <item>NAEEM MAHAMUD CHOWDHURY</item>
        <item>SOURAV MONDAL</item>
        <item>AL NAHIAN ISLAM</item>
        <item>MD.NAFIZ HASAN</item>
        <item>SHARIF RAFID UR RAHMAN</item>
        <item>MD. RATUL HASAN</item>
        <item>MUSFIQUR RAHMAN KHAN SOMPOD</item>
        <item>MD. EMON MIA</item>
        <item>MD.SHAHADAT HOSSAIN</item>
        <item>MAHDI AKIF</item>
        <item>MD. SAKIB RYHAN</item>
        <item>MAHMUDUN NABY GALIB</item>
        <item>MD. MEHEDI HASAN</item>
        <item>K.M. MEHEDY HASAN</item>
        <item>JAYED BIN SABIT</item>
        <item>BADHON SARKAR</item>
        <item>KHAN TANZID AHMED</item>
        <item>Shariar Ahmmed Anuvob</item>
        <item>ANINDYA BISWAS</item>
        <item>MD. NAHID HASAN</item>
        <item>SM SHARHRIAR HASAN ALIV</item>
        <item>FARHAN AHMED</item>
        <item>ROHAN MASUD PRANTO</item>
        <item>LIKHON TIKADAR</item>
        <item>MD. MUBASHSHIR HOSSAIN</item>
        <item>MASHUKUR RAHMAN</item>
        <item>SIMANTO PRAMANIK</item>
        <item>MAHIN IBNE SHORFUDDIN</item>
        <item>ABID HAIDER</item>
        <item>MD. TAMIM BISWAS</item>
        <item>SAKIB MAHMUD RIDAY</item>
        <item>MD. YOUSUF ZAYED TAKBIR</item>
        <item>JUBAYER RAHMAN</item>
        <item>TALHA JUBAYER TAMIM</item>
        <item>MD.DHRUBO ISLAM</item>
        <item>SAFWAN IBN ALAM</item>
        <item>USHA BIN SAIED</item>
        <item>MD. RABBI HOSSAIN BAPPT</item>

    </string-array>
    <string-array name="students_name_9sMsAgA">
        <item>GAURAB GHOSH</item>
        <item>FATHA ALI JESAN</item>
        <item>ALIF BIN HUDA</item>
        <item>RIFAT ULLAH</item>
        <item>KAZI NISHAN</item>
        <item>MD. MAHEDI HASAN LEMON</item>
        <item>RAKIB REZA</item>
        <item>BONDON KUMAR BISWAS</item>
        <item>BADON BISWAS</item>
        <item>ZANNATUL NAYEEM</item>
        <item>md. rakib mia</item>
        <item>SHARIF SHAHARIAR RAFI</item>
        <item>KAZI RAIHAN HASIN</item>
        <item>MD.ABID HASAN</item>

    </string-array>
    <string-array name="students_name_9sMsAgC">
        <item>Mazharul Islam</item>
        <item>MD. TASHRIF ALAM</item>
        <item>MD.POROSH MAHMUD</item>
        <item>MOHAMMED HAMIM ABDULLAH</item>
        <item>ALIF MAHMUD</item>
        <item>ABRAHAM KUSHAL GAZI</item>
        <item>RABIUL ISLAM RAFI</item>

    </string-array>
</resources>