<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutSchool">

    <LinearLayout
        android:id="@+id/linearBackgroundColor"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/background_linear1"
        android:orientation="vertical">

    </LinearLayout>


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/bensenhand_font"
        android:text="@string/titleAboutBangla"
        android:gravity="center"
        android:textSize="23sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textViewTitleEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/opensanslight"
        android:text="@string/titleAboutEnglish"
        android:textSize="23sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:gravity="center"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:layout_alignParentLeft="true"
        android:padding="20dp"
        android:layout_below="@+id/linearBackgroundColor">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bodyTextEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensanslight"
                android:padding="15dp"
                android:text="@string/bodyHistorySchoolAboutEnglish"
                android:textSize="18sp"
                android:textColor="#000"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/bodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bensenhand_font"
                android:padding="15dp"
                android:text="@string/bodyHistorySchoolAboutBangla"
                android:textColor="#000"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="37dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_translate_black_24dp"
        tools:ignore="VectorDrawableCompat"
        android:layout_alignParentRight="true" />



</RelativeLayout>