<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneNumber">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/background_linear1" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="133dp"
        android:layout_height="105dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/clover" />

    <ImageView
        android:id="@+id/translateImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_translate_black_24dp"
        android:layout_alignParentRight="true"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/titleBangla"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/phoneNumberTitleBangla"
        android:textSize="23sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/bensenhand_font"
        android:textColor="#fff"/>
    <TextView
        android:id="@+id/titleEnglish"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/phoneNumberTitleEnglish"
        android:textSize="23sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/bensenhand_font"
        android:visibility="gone"
        android:textColor="#fff"/>
    <TextView
        android:id="@+id/headSirEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/headSirEnglish"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/opensanslight"
        android:layout_below="@+id/imageView2"
        android:visibility="gone"
        android:textColor="#000"/>
    <TextView
        android:id="@+id/headSirBangla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/headSirBangla"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/bensenhand_font"
        android:layout_below="@+id/imageView2"
        android:textColor="#000"/>

    <ListView
        android:id="@+id/listViewPhoneNumbers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="206dp"
        android:padding="10dp"
        android:layout_alignParentLeft="true" />


</RelativeLayout>