<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttendenceActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/attendence_menu_title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attendence_menu_nselect_an_option_below"
        android:gravity="center"
        android:textColor="#000"
        android:fontFamily="@font/opensanslight"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:padding="20dp"/>

    <android.support.v7.widget.CardView
        android:id="@+id/attendenceReportTextView"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="15dp"
        tools:targetApi="lollipop"
        android:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_swap_vertical_circle_black_24dp" />
        <TextView
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ONLINE DATA SECTION"
            android:gravity="center"
            android:textColor="#000"
            android:fontFamily="@font/opensanslight"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_margin="5dp"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/savedAttendenceTextView"
        android:elevation="5dp"
        tools:targetApi="lollipop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_save_black_24dp" />
        <TextView
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saved_attendence_text"
            android:gravity="center"
            android:textColor="#000"
            android:fontFamily="@font/opensanslight"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/submitAttendenceOffline"
        android:elevation="5dp"
        tools:targetApi="lollipop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_folder_open_black_24dp" />
        <TextView
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_attendence_offline"
            android:gravity="center"
            android:textColor="#000"
            android:fontFamily="@font/opensanslight"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/studentWiseAttendence"
        android:elevation="5dp"
        tools:targetApi="lollipop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_assignment_black_24dp" />
        <TextView
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Student Wise Report"
            android:gravity="center"
            android:textColor="#000"
            android:fontFamily="@font/opensanslight"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/onlineSubmission"
        android:elevation="5dp"
        tools:targetApi="lollipop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_cloud_upload_black_24dp" />
        <TextView
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit Attendence(ONLINE)"
            android:gravity="center"
            android:textColor="#000"
            android:fontFamily="@font/opensanslight"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
    </android.support.v7.widget.CardView>
</LinearLayout>